Fix tweet's photo preview layout problem

--- a/src/App.sass
+++ b/src/App.sass
@@ -91,14 +91,12 @@ a > .name:hover
   gap: 10px
   &.layout-2
     grid-template-columns: 1fr 1fr
-    height: 288px
+    grid-template-rows: 288px
   &.layout-3
     grid-template-columns: 1fr 1fr
-    grid-template-rows: 1fr 1fr
-    height: 288px
-    .PhotoPreview:first-of-type
+    grid-template-rows: 138px 138px
+    a:first-of-type
       grid-row: span 2
   &.layout-4
     grid-template-columns: 1fr 1fr
-    grid-template-rows: 1fr 1fr
-    height: 288px
+    grid-template-rows: 138px 138px
