--- a/src/components/PhotoPreview/PhotoPreview.sass
+++ b/src/components/PhotoPreview/PhotoPreview.sass
@@ -2,6 +2,7 @@
 
 .PhotoPreview
   position: relative
+  height: 100%
   border: solid 1px App.$dark-10
   border-radius: 16px
   overflow: hidden
