--- a/src/components/Tweet/TweetCard.sass
+++ b/src/components/Tweet/TweetCard.sass
@@ -69,6 +69,7 @@
     @include App.photo-previews-layout
     margin-top: 12px
     position: relative
+    overflow: hidden
     z-index: 1
 
   .StatsActionsBar
